[FIX] Role name spacing on Permissions page (#14625)

--- a/app/authorization/client/stylesheets/permissions.css
+++ b/app/authorization/client/stylesheets/permissions.css
@@ -37,6 +37,9 @@
 		}
 
 		.rotator {
+			width: 80px;
+			margin: 0 auto;
+
 			transform: rotate(-90deg);
 		}
 
